fix: cards paddings on mobile

--- a/static/css/v3/card.css
+++ b/static/css/v3/card.css
@@ -18,8 +18,8 @@
   border-radius: var(--border-radius-xl);
   border: 1px solid var(--color-stroke-weak);
   background: var(--color-surface-weak);
-  padding-top: var(--space-large);
-  padding-bottom: var(--space-large);
+  padding-top: var(--space-card);
+  padding-bottom: var(--space-card);
   height: fit-content;
 }
 
@@ -29,17 +29,14 @@
 
 .basic-card--green {
   background: var(--color-surface-weak-accent-green);
-  overflow: clip;
 }
 
 .basic-card--yellow {
   background: var(--color-surface-weak-accent-yellow);
-  overflow: clip;
 }
 
 .basic-card--teal {
   background: var(--color-surface-weak-accent-teal);
-  overflow: clip;
 }
 
 .wide-card {
@@ -65,7 +62,7 @@
 .card__header {
   align-self: stretch;
   display: flex;
-  padding: 0 var(--space-large);
+  padding: 0 var(--space-card);
 }
 
 .card__image {
